# RAGLight

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  discussion_example.py  ingestion_example.py  llm.py  main.py  pyproject.toml  rag.py  rag_example.py  requirements.txt  setup.py  systemPrompt.txt  vectorStore.py
examples/: Dockerfile.example  agentic_rag_example.py  discussion_example.py  ingestion_example.py  rag_example.py  requirements.txt  simple_agentic_rag_example.py  simple_api_example.py  simple_rag_api_example.py  simple_rat_api_example.py
src/: __init__.py
src/embeddings/: huggingfaceEmbeddings.py
src/llm/: ollamaModel.py
src/rag/: builder.py  rag.py  ragBuilder.py
src/raglight/: __init__.py
src/raglight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/raglight/cli/: main copy.py  main.py  nltk_management.py
src/raglight/config/: agentic_rag_config.py  rag_config.py  rat_config.py  settings.py  vector_store_config.py
src/raglight/cross_encoder/: crossEncoderModel.py  huggingfaceCrossEncoder.py  huggingface_cross_encoder.py
src/raglight/embeddings/: embeddingsModel.py  embeddings_model.py  huggingfaceEmbeddings.py  huggingface_embeddings.py  ollamaEmbeddings.py  ollama_embeddings.py  openaiEmbeddings.py  openai_embeddings.py
src/raglight/llm/: llm.py  lmStudioModel.py  lmstudio_model.py  mistralModel.py  mistral_model.py  ollamaModel.py  ollama_model.py  openaiModel.py  openai_model.py
src/raglight/models/: data_source_model.py
src/raglight/rag/: agentic_rag.py  builder.py  rag.py  simple_agentic_rag_api.py  simple_rag_api.py  simple_rat_api.py
src/raglight/rat/: rat.py  simple_rat_api.py
src/raglight/scrapper/: github_scrapper.py
src/raglight/vectorestore/: chroma.py  vectorStore.py
src/raglight/vectorstore/: chroma.py  vector_store.py
src/vectorestore/: chroma.py  vectorStore.py
tests/: test_config.py
tests/tests_embeddings/: test_huggingfaceEmbeddings.py
tests/tests_llm/: test_ollamaModel.py  test_ollama_model.py
tests/tests_rag/: test_builder.py
tests/tests_vectore_store/: test_chroma_vectorStore.py
